--- a/Web/CarShop.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CarShop.Web/Views/Shared/_Layout.cshtml
@@ -61,6 +61,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Developer" asp-action="Info">Developer</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="Create">Contacts</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
