--- a/Web/CarShop.Web/Views/Shop/All.cshtml
+++ b/Web/CarShop.Web/Views/Shop/All.cshtml
@@ -1,8 +1,26 @@
-﻿@model CarShop.Web.ViewModels.Shop.ByIdPointsViewModel
+﻿@model CarShop.Web.ViewModels.Shop.ProductsListViewModel
 @{
     this.ViewData["Title"] = "Shop, all items";
 }
 <h1>@this.ViewData["Title"]</h1>
 <h4>Wellcome to our shop!</h4>
-<h5><b>@Model.UserName</b> you can use your points to buy products!</h5>
-<p>Your ballance: <b>@Model.PointsCount</b></p>
+<h5><b>UserName</b> you can use your points to buy products!</h5>
+<p>Your ballance: <b>PointsCount</b></p>
+
+@foreach (var product in Model.ProductList)
+{
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="..." class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+}
