--- a/Web/CarShop.Web/Views/Developer/Info.cshtml
+++ b/Web/CarShop.Web/Views/Developer/Info.cshtml
@@ -35,7 +35,7 @@
         <li class="list-group-item">C#</li>
         <li class="list-group-item">MSSQL</li>
         <li class="list-group-item">ASP.NET core</li>
-        <li class="list-group-item">MVS</li>
+        <li class="list-group-item">MVC</li>
     </ul>
 </div>
 <!-- Contacts -->
