--- a/Web/CarShop.Web/Views/Shop/All.cshtml
+++ b/Web/CarShop.Web/Views/Shop/All.cshtml
@@ -2,6 +2,13 @@
 @{
     this.ViewData["Title"] = "Shop, all items";
 }
+@if (this.TempData["SuccsessfulAddProductItem"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>@this.TempData["SuccsessfulAddProductItem"]</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
 <h1>@this.ViewData["Title"]</h1>
 <h4>Wellcome to our shop!</h4>
 <h5><b>UserName</b> you can use your points to buy products!</h5>
@@ -19,6 +26,7 @@
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <a href="#" class="btn btn-primary">Buy</a>
                 </div>
             </div>
         </div>
